<resources>
    <string name="app_name">MobiCare</string>
    <string name="Salvar">Salvar</string>
    <string name="Buscar">Buscar</string>
    <string name="Ajuda">Ajuda</string>
    <string name="Configuracoes">Configurações</string>
    <string name="menu_remedios">Remédios</string>
    <string name="menu_contatos">Contatos</string>
    <string name="menu_programas_favoritos">Programas favoritos</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="apelido">Apelido</string>
    <string name="msg_erro_validacao_usuario">Por favor, digite um telefone válido</string>
    <string name="msg_telefone_requerido">Por favor, preencha o campo do telefone</string>
    <string name="msg_usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="nome">Nome</string>
    <string name="hint_nome">Seu nome</string>
    <string name="telefone">Número do celular</string>
    <string name="hint_seu_celular">Seu número de celular com DDD</string>
    <string name="salvar">Salvar</string>
    <string name="configuracoes">Configurações</string>
    <string name="busca">Busca</string>
    <string name="ajuda">Ajuda</string>
    <string name="voltar">Voltar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_cadastro_contato">Contato</string>
    <string name="Excluir">Excluir</string>
    <string name="hint_horario">Horário da próxima administração</string>
    <string name="horario">Horários</string>
    <string name="dose">Dose</string>
    <string name="hint_dose">Dose (Exemplo: 1 comprimido)</string>
    <string name="hint_nome_do_programa">Nome do programa</string>
    <string name="nome_programa">Nome do programa</string>
    <string name="horarios_programa">Horários sugeridos para notificação</string>
    <string name="link">Link</string>
    <string name="hint_link">Disponível online? Deixe o link (http://…)</string>
    <string name="registro_usuario">Registro de usuário</string>
    <string name="escolha_seu_perfil">Escolha seu perfil</string>
    <string name="Idoso">Idoso</string>
    <string name="Cuidador">Cuidador</string>
    <string name="registro_idoso">Registro do idoso</string>
    <string name="gravar_instrucao">Gravar instrução</string>
    <string name="msg_gravar_instrucao">Pressione o botão abaixo para iniciar a gravação. Grave sua mensagem e pressione novamene para finalizar.</string>
    <string name="btn_usar">Usar este</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_ouvir">Ouvir</string>
    <string name="btn_regravar">Regravar</string>
    <string name="msg_erro_gravacao">Erro ao gravar áudio</string>
    <string name="msg_erro_reproducao">Erro ao reproduzir áudio</string>
    <string name="ouvir_instrucao">Ouvir instrução</string>
    <string name="btn_fechar">Fechar</string>

    <string name="abrir_drawer">Abrir menu</string>
    <string name="fechar_drawer">Fechar menu</string>
    <string name="Contato">Contato</string>
    <string name="msg_selecione_perfil">Selecione o perfil com que deseja utilizar o app</string>
    <string name="registro_cuidador">Registro do cuidador</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviar">Enviar</string>
    <string name="menu_gerenciar">Gerenciar</string>
    <string name="menu_sobre">Sobre o app</string>
    <string name="menu_chat">Início</string>
    <string name="app_powered_by">IFSP São Carlos</string>
    <string name="msg_aguardando">Aguardando…</string>
    <string name="gravar_audio">Gravar áudio</string>
    <string name="action_sair">Sair</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="registro_foto">Tire uma selfie</string>
    <string name="msg_erro_validacao_idoso">Este número não está registrado para nenhum idoso. Verifique o número ou peça o registro pelo Cuidador.</string>
    <string name="hint_celular_idoso">O número do celular do idoso</string>
    <string name="nome_idoso">Nome do idoso</string>
    <string name="nome_cuidador">Nome do cuidador</string>
    <string name="dados_cuidador">Dados do cuidador</string>
    <string name="dados_idoso">Dados do idoso</string>
    <string name="registro_contato">Registro do contato</string>
    <string name="msg_erro_busca_contato">Erro ao buscar contato</string>
    <string name="msg_erro_salva_foto">Erro ao salvar foto</string>
    <string name="msg_sucesso_salva_foto">Foto salva com sucesso</string>
    <string name="hint_nome_do_remedio">Nome do remédio</string>
    <string name="hint_repeticao">Repete em</string>
    <string name="repete_em">Repete em (horas)</string>
    <string name="hint_nome_idoso">Nome do idoso</string>
    <string name="nao_repete">Não repete</string>
    <string name="diariamente">Diariamente</string>
    <string name="horas">Horas</string>
    <string name="ajustar_administracao">Reprogramar a cada medicação</string>
    <string name="semana_domingo">Domingo</string>
    <string name="semana_segunda">Segunda-feira</string>
    <string name="semana_terca">Terça-feira</string>
    <string name="semana_quarta">Quarta-feira</string>
    <string name="semana_quinta">Quinta-feira</string>
    <string name="semana_sexta">Sexta-feira</string>
    <string name="semana_sabado">Sábado</string>
    <string name="quais_dias">Em quais dias da semana passa?</string>
    <string name="msg_erro_validacao_contato">Este número não está registrado para nenhum contato. Verifique o número ou peça o registro pelo Cuidador.</string>
    <string name="hint_codigo_de_verificacao">Código de verificação</string>
    <string name="iniciar_autenticacao">Iniciar</string>
    <string name="verificar">Verificar</string>
    <string name="reenviar">Reenviar</string>

    <!-- quickstart android auth -->
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Código de verificação</string>
    <string name="status_code_sent">Código solicitado</string>
    <string name="status_verification_failed">Falha na verificação</string>
    <string name="status_verification_succeeded">Verificação concluída com sucesso</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="hint_horario_programa">Horário de exibição</string>
    <string name="autenticacao_firebase">Autenticação com Firebase</string>
    <string name="excluir">Excluir</string>
    <string name="msg_confirma_excluir">Tem certeza que deseja excluir este item?</string>
    <string name="btn_excluir">Excluir</string>
    <string name="chat_empty">Use o botão abaixo e envie mensagem de voz ao idoso</string>
    <string name="ouvir_mensagem">Ouvir mensagem</string>
    <string name="confirma_administracao_remedio">Confirmar a administração do remédio</string>
    <string name="hint_horario_administracao">Horário da medicação</string>
    <string name="hint_horario_proximo">Próximo horário</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="menu_confirmar_remedio">Já tomei!</string>
    <string name="menu_repetir">Repetir</string>
    <string name="start_chatting">iniciar chat</string>
    <string name="app_subtitle">Cuidados para idosos</string>
    <string name="action_confirmar_mensagem">Já ouvi!</string>
    <string name="nenhum_resultado">Nenhum resultado</string>
    <string name="nenhuma_mensagem">Nenhuma mensagem</string>
    <string name="nenhum_remedio">Nenhum remédio</string>
    <string name="remedios_empty">Use o botão abaixo para agendar lembrete de remédio</string>
    <string name="nenhum_programa">Nenhum programa</string>
    <string name="programas_empty">Use o botão abaixo para criar um lembrete de programa</string>
    <string name="contatos_empty">Use o botão abaixo para cadastrar um contato</string>
    <string name="nenhum_contato">Nenhum contato</string>
    <string name="hint_numero_celular">Número do celular do contato</string>
    <string name="msg_erro_nenhum_perfil_selecionado">Nenhum perfil selecionado</string>
    <string name="mensagens">Mensagens</string>
    <string name="msg_erro_telefone_invalido">Número de telefone inválido</string>
    <string name="msg_erro_nome_invalido">Preencha o nome corretamente</string>
    <string name="nenhuma_foto">Tire uma selfie! \nAssim o idoso saberá quem é você.</string>
    <string name="foto_empty">Use o ícone abaixo para abrir a câmera</string>
    <string name="pular">PULAR</string>


</resources>
