<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/menu_chat" />
    </group>

    <group
        android:id="@+id/grupoMenuCuidador"
        android:checkableBehavior="single"
        android:visible="false">
        <item android:title="@string/menu_gerenciar">
            <menu>
                <item
                    android:id="@+id/nav_remedios"
                    android:icon="@drawable/ic_alarm_add_black_48dp"
                    android:title="@string/menu_remedios" />
                <item
                    android:id="@+id/nav_contatos"
                    android:icon="@drawable/ic_contacts_black_48dp"
                    android:title="@string/menu_contatos" />
                <item
                    android:id="@+id/nav_programas"
                    android:icon="@drawable/ic_live_tv_black_48dp"
                    android:title="@string/menu_programas_favoritos" />
            </menu>
        </item>
    </group>


    <item android:title="@string/menu_sobre">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartilhar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/enviar" />
        </menu>
    </item>

</menu>
