<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/app_subtitle"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/action_sair" android:visibility="invisible" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/hint_seu_celular" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_start_verification"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content"
            android:text="@string/enviar"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_verification_code"
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:visibility="gone"
                android:hint="@string/hint_codigo_de_verificacao" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="@dimen/item_width"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:weightSum="2.0">

            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/button_verify_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verificar"/>

            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/button_resend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/reenviar"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

