<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.cuidador.fragments.CadastroRemedioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
            layout="@layout/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:orientation="vertical" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/programa_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nome_do_programa" />
                </android.support.design.widget.TextInputLayout>
    
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/programa_horarios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/hint_horario_programa" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/programa_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_link" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@string/quais_dias"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:orientation="vertical">
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_domingo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_domingo" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_segunda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_segunda" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_terca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_terca" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_quarta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_quarta" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_quinta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_quinta" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_sexta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_sexta" />
                    <View style="@style/Divider"/>
                    <CheckedTextView
                        android:id="@+id/cb_sabado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkMark="@drawable/ic_check_black_36dp"
                        android:padding="@dimen/tile_padding"
                        android:text="@string/semana_sabado" />

                </LinearLayout>
                
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>